Fix arrow position on mobile

--- a/style.css
+++ b/style.css
@@ -55,6 +55,23 @@ body .neck p {
   margin:0 auto 16px auto
 }
 
+body .neck .arrow-bottleneck {
+  width: 40px;
+  top: 50%;
+  left: 20px;
+  position: absolute;
+  transform: scaleX(-1);
+}
+
+@media screen and (min-width: 768px) {
+  body .neck .arrow-bottleneck {
+    width: 50px;
+    transform: rotate(-98deg);
+    top: 0;left: calc(100% - 25px);
+    position: absolute;
+  }
+}
+
 body .integrations {
   background: linear-gradient(180deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 90%, #fff 100%), url("public/media/lines-background.svg");
   background-repeat: no-repeat;
